<resources>
    <string name="app_name">Gara Cam</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="button_start">Start Recording</string>
    <string name="button_stop">Stop Recording</string>
    <string name="info_recording_running">Recording is running</string>
    <string name="pref_mute_shutter">Mute Shutter Sound</string>
    <string name="pref_mute_shutter_summ">Prevents shutter sound while recording</string>
    <string name="pref_camera">Select Camera</string>
    <string name="pref_camera_camera">Camera</string>
    <string name="pref_camera_front">front</string>
    <string name="pref_camera_back">back</string>
    <string name="pref_frame_rate">Frame Rate</string>
    <string name="pref_frame_size">Frame Size</string>
    <string name="pref_stop_low_battery">Low Battery</string>
    <string name="pref_stop_low_battery_summ">Stop recording if the battery level gets low</string>
    <string name="pref_stop_low_storage">Low Storage Space</string>
    <string name="pref_stop_low_storage_summ">Stop recording if the storage space gets low</string>
    <string name="pref_stop_recording_after">Stop Recording After</string>
    <string name="pref_infinite">Infinite</string>
    <string name="format_fps">fps</string>
    <string name="pref_exposure_compensation">Exposure Compensation</string>
    <string name="notification_preparing">Preparing recording</string>
    <string name="error_missing_permission">Missing permission</string>
    <string name="pref_zoom">Zoom</string>
    <string name="pref_video_enc_summ">Set 0 for maximum rate (default).</string>
    <string name="format_bps">%s bit/s</string>
    <string name="encode_best">Best quality</string>
    <string name="pref_video_enc_hint">Enter value in bit/s</string>
    <string name="pref_video_enc">Video Encoding Bit Rate</string>
    <string name="error_too_short">Video too short</string>
</resources>
