<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Camera">
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/pref_camera"
            android:key="pref_camera"
            android:title="@string/pref_camera" />
        <ListPreference
            android:dialogTitle="@string/pref_frame_size"
            android:key="pref_frame_size"
            android:title="@string/pref_frame_size" />
        <ListPreference
            android:dialogTitle="@string/pref_frame_rate"
            android:key="pref_frame_rate"
            android:title="@string/pref_frame_rate" />
        <com.gara.cam.preference.SeekBarPreference
            android:defaultValue="0"
            android:key="pref_exposurecomp"
            android:title="@string/pref_exposure_compensation" />
        <com.gara.cam.preference.SeekBarPreference
            android:defaultValue="0"
            android:key="pref_zoom"
            android:title="@string/pref_zoom" />
        <EditTextPreference
            android:key="pref_video_encoding_br"
            android:inputType="number"
            android:hint="@string/pref_video_enc_hint"
            android:dialogMessage="@string/pref_video_enc_summ"
            android:title="@string/pref_video_enc" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Behavior">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_mute_shutter"
            android:summary="@string/pref_mute_shutter_summ"
            android:title="@string/pref_mute_shutter" />
        <com.gara.cam.preference.SeekBarPreference
            app:log="1.2"
            app:stickyValue="60"
            app:suffix="min"
            android:defaultValue="2880"
            android:key="pref_stop_recording_after"
            app:max="2880"
            android:title="@string/pref_stop_recording_after" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_stop_low_battery"
            android:summary="@string/pref_stop_low_battery_summ"
            android:title="@string/pref_stop_low_battery" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_stop_low_storage"
            android:summary="@string/pref_stop_low_storage_summ"
            android:title="@string/pref_stop_low_storage" />
    </PreferenceCategory>

</PreferenceScreen>
